--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-redux-firebase": "^2.1.9",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-firestore": "^0.5.8"
   },
   "scripts": {
     "start": "react-scripts start",
