--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-firebaseui": "^3.1.2",
+    "react-google-button": "^0.5.3",
     "react-redux": "^5.1.0",
     "react-redux-firebase": "^2.1.9",
     "react-router-dom": "^4.3.1",
